[project]
name = "interview-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "PyYAML",
    "pydantic",
    "rich",
    "openai",
    "boto3",
    "dapr",
    "fastapi[standard]",
    "uvicorn",
    "aiortc",
    "av",
    "numpy",
    "opencv-python",
    "torch",
    "transformers",
    "diffusers",
    "sentence-transformers",
    "torchvision",
    "torchaudio",
]
